# variant_database

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: NAMESPACE.md  README.md
docs/architecture/: NAMESPACE.md  README.md  architecture.md  discovery_philosophy.md  ecosystem_layer_model.md  emergent_capability_principle.md  epistemic_boundaries.md  evidence_persistence_philosophy.md  genotype_first_class_vdb_evidence_model.md  hg002_wgs_stress_test_retirement_policy.md  interoperability_topology.md  knowledge_flow_philosophy.md  namespace_authority_model.md  scientific_evidence_preservation_principles.md  tep_vdb_architecture.md  three_layer_validation_strategy.md  truth_layer_philosophy.md  vdb_storage_strategy.md
docs/contracts/: NAMESPACE.md  README.md  system_contract.md
docs/design/: NAMESPACE.md  README.md  assertion_projection_taxonomy.md  assertion_record_and_projection_model.md  assertion_record_identity_preservation_model.md  assertion_record_resolver_policy_model.md  convergence_geometry_model.md  evidence_assertion_registration_model.md  evidence_convergence_surface_model.md  query_surface_design.md  (+9 more)
tests/: __init__.py  test_assertion_registration.py  test_coordinate_extractor.py  test_evidence_surface_classifier.py  test_feature_declaration_extractor.py  test_ingestion_reporter.py  test_manifest_reader.py  test_metadata_extractor.py  test_package_scanner.py  test_participant_extractor.py  test_persistence_inventory.py  test_phase0_smoke.py  test_registration_orchestrator.py  test_source_identity.py  test_tep_package_resolver.py
(+558 files in other folders)
