[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "variant-database"
version = "0.0.0"
description = "Variant Database preservation-first evidence system."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "phase4_3_layer1: Phase 4.3 Assertion Record Layer 1 synthetic/local tests",
]
pythonpath = ["src", "."]
testpaths = ["tests"]
